kubernetes/apps/network/playit/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: playit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: playit

  egress:
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            ingress.home.arpa/playit: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists # any namespace
